--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/api/save/:slug", "destination": "/api/save.js?slug=:slug" },
+    { "source": "/:slug", "destination": "/index.html" }
   ]
 }
